<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <EditText
        android:autofillHints="name"
        android:id="@+id/text1EditText"
        android:inputType="text"
        android:layout_width="290dp"
        android:layout_height="79dp"
        android:layout_marginTop="84dp"
        android:hint="@string/input_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:autofillHints="name"
        android:id="@+id/text2EditText"
        android:inputType="text"
        android:layout_width="290dp"
        android:layout_height="66dp"
        android:layout_marginTop="40dp"
        android:hint="@string/input_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1EditText" />

    <Button
        android:id="@+id/compareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2EditText" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="289dp"
        android:layout_height="52dp"
        android:layout_marginTop="52dp"
        android:autofillHints="name"
        android:text="@string/view_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compareButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>